Refactor discussion and remove experimental sections

--- a/main.tex
+++ b/main.tex
@@ -19,8 +19,8 @@
 \input{sections/framework}
 
 \input{sections/diagnostics}
-\input{sections/experiments}
-\input{sections/observations}
+\input{sections/diagnostic_protocol}
+
 \input{sections/discussion}
 \input{sections/conclusion}
 
