Minor textual fixes, no content changes

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -11,6 +11,6 @@ By combining local geometric structure in feature space with discrepancies in ta
 The resulting segmentation highlights regions where a global model fails systematically, while avoiding overreaction to noise.
 
 The framework admits both frequentist and Bayesian interpretations: as a regularized risk minimization problem with complexity penalties, or as an implicit evidence-based assessment of competing structural hypotheses.
-Through controlled synthetic experiments, we demonstrate how segmentation emerges, stabilizes, or dissolves as data are progressively corrupted by scale changes and noise, reflecting conditions commonly encountered in real-world actuarial and industrial applications.
+Through controlled synthetic experiments, we illustrate how segmentation may emerge, stabilize, or dissolve as data are progressively corrupted by scale changes and noise, reflecting conditions commonly encountered in real-world actuarial and industrial applications.
 
 \end{abstract}
