--- a/sections/diagnostic_protocol.tex
+++ b/sections/diagnostic_protocol.tex
@@ -88,7 +88,7 @@ consistent and localized evidence to support segmentation. In this sense, the
 protocol highlights not only when segmentation is suggested, but also when it is
 explicitly discouraged.
 
-The purpose of this controlled diagnostic analysis is not empirical validation,
+The purpose of this controlled diagnostic examination is not empirical validation,
 but to clarify how the proposed framework behaves under interpretable and
 progressively degraded conditions. No claims are made regarding optimality,
 predictive superiority, or comparative performance relative to alternative
