--- a/sections/discussion.tex
+++ b/sections/discussion.tex
@@ -23,7 +23,7 @@ From a Bayesian perspective, this corresponds to posterior support remaining
 concentrated on simpler structural hypotheses as the likelihood becomes less
 informative.
 
-Importantly, the framework is insensitive to uniform scale transformations of
+Importantly, the framework is diagnostically insensitive to uniform scale transformations of
 the target variable.
 Changes in magnitude alone do not induce segmentation unless they are associated
 with genuine inconsistencies in conditional target behavior.
